--- a/Weekly Project 1.ipynb
+++ b/Weekly Project 1.ipynb
@@ -25,6 +25,18 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "import cv2\n",
+    "import numpy as np\n",
+    "import imutils\n",
+    "from matplotlib import pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -32,7 +44,7 @@
        "Text(0.5, 1.0, 'Segmented image')"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -48,12 +60,7 @@
     }
    ],
    "source": [
-    "import cv2\n",
-    "import numpy as np\n",
-    "import imutils\n",
-    "from matplotlib import pyplot as plt\n",
-    "\n",
-    "path = \"C:/Users/shaia/Documents/Opgaveregning/AutoSys/4. semester/Perception for autonome systemer/Projekt 1/\"\n",
+    "path = \"C:/Users/shaia/Documents/Opgaveregning/AutoSys/4. semester/Perception for autonome systemer/Projekt/Projekt 1/\"\n",
     "image_name = \"appletree.jpg\"\n",
     "\n",
     "bgr_img = cv2.imread(path + image_name)\n",
@@ -94,16 +101,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x1f87ae501f0>"
+       "<matplotlib.image.AxesImage at 0x2237bdf7c40>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -139,16 +146,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x1f87aebae30>"
+       "<matplotlib.image.AxesImage at 0x2237be8f550>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -178,16 +185,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x1f87af48d90>"
+       "<matplotlib.image.AxesImage at 0x2237bf3c370>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -230,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -239,7 +246,7 @@
        "Text(0.5, 1.0, 'Removed green screen')"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -287,16 +294,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x1f87af9b130>"
+       "<matplotlib.image.AxesImage at 0x2238206d480>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
