--- a/Weekly Project 2.ipynb
+++ b/Weekly Project 2.ipynb
@@ -48,7 +48,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "path = \"C:/Users/shaia/Documents/Opgaveregning/AutoSys/4. semester/Perception for autonome systemer/Projekt 2/\"\n",
+    "path = \"C:/Users/shaia/Documents/Opgaveregning/AutoSys/4. semester/Perception for autonome systemer/Projekt/Projekt 2/\"\n",
     "video_name = \"Robots.mp4\"\n",
     "\n",
     "cap = cv2.VideoCapture(path + video_name)\n",
