--- a/Weekly Project 3.ipynb
+++ b/Weekly Project 3.ipynb
@@ -60,7 +60,7 @@
     "    right = right.astype(np.int32)\n",
     "    return np.sum(np.abs(left - right))\n",
     "\n",
-    "path = \"C:/Users/shaia/Documents/Opgaveregning/AutoSys/4. semester/Perception for autonome systemer/Projekt 3/\"\n",
+    "path = \"C:/Users/shaia/Documents/Opgaveregning/AutoSys/4. semester/Perception for autonome systemer/Projekt/Projekt 3/\"\n",
     "\n",
     "imgLeft = cv2.imread(path + \"nose_left.png\")\n",
     "imgRight = cv2.imread(path + \"nose_right.png\")\n",
