--- a/Weekly Project 4.ipynb
+++ b/Weekly Project 4.ipynb
@@ -47,7 +47,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "path = \"C:/Users/shaia/Documents/Opgaveregning/AutoSys/4. semester/Perception for autonome systemer/Projekt 4/\"\n",
+    "path = \"C:/Users/shaia/Documents/Opgaveregning/AutoSys/4. semester/Perception for autonome systemer/Projekt/Projekt 4/\"\n",
     "\n",
     "nb_vertical = 9\n",
     "nb_horizontal = 6\n",
