--- a/Weekly Project 5.ipynb
+++ b/Weekly Project 5.ipynb
@@ -64,7 +64,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "path = \"C:/Users/shaia/Documents/Opgaveregning/AutoSys/4. semester/Perception for autonome systemer/Projekt 5/\"\n",
+    "path = \"C:/Users/shaia/Documents/Opgaveregning/AutoSys/4. semester/Perception for autonome systemer/Projekt/Projekt 5/\"\n",
     "\n",
     "source = o3d.io.read_point_cloud(path + \"global_registration/r1.pcd\")\n",
     "target = o3d.io.read_point_cloud(path + \"global_registration/r2.pcd\")\n",
@@ -154,7 +154,7 @@
      "output_type": "stream",
      "text": [
       "Initial alignment\n",
-      "RegistrationResult with fitness=9.382678e-01, inlier_rmse=8.977609e-03, and correspondence_set size of 155957\n",
+      "RegistrationResult with fitness=9.742326e-01, inlier_rmse=8.672192e-03, and correspondence_set size of 161935\n",
       "Access transformation to get result.\n"
      ]
     }
